Working on analysis issues